<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="vn.piti.draku.piti.TeacherNotificationActivity"
    tools:showIn="@layout/activity_notification_teacher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/ms9_DefaultShadowStyle"
        android:id="@+id/shadow_menu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ms9_shadowTranslationZ="2dp"
        app:ms9_shadowElevation="4dp">
    <LinearLayout
        android:id="@+id/boc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shadow"
        android:layout_margin="10dp"
        android:padding="5dp">

        <pl.coreorb.selectiondialogs.views.SelectedItemView
            android:id="@+id/class_siv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/class_hint"
            app:itemIcon="@drawable/ic_class"
            app:itemName="Lớp" />

        <pl.coreorb.selectiondialogs.views.SelectedItemView
            android:id="@+id/student_siv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/student_hint"
            app:itemIcon="@drawable/ic_student_black"
            app:itemName="@string/student_hint" />

        <pl.coreorb.selectiondialogs.views.SelectedItemView
            android:id="@+id/content_siv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/content_hint"
            app:itemIcon="@drawable/icon_text"
            app:itemName="@string/text_hint" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp">
            <android.support.v7.widget.AppCompatButton
                android:layout_below="@+id/blockDate"
                android:id="@+id/btnSend"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="Gửi"
                android:textColor="@color/white"
                android:background="@drawable/btn_notification"
                android:textStyle="bold"/>
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
    </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>
</ScrollView>