<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main1"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleColor="@android:color/black">
        <RelativeLayout
            android:id="@+id/parent_main_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/notification_icon"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:src="@drawable/notification"/>
            <TextView
                android:id="@+id/title1"
                android:layout_toRightOf="@id/notification_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent_main_notification"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </RelativeLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main2"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleColor="@android:color/black">
        <RelativeLayout
            android:id="@+id/parent_main_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/student_icon"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:src="@drawable/student"/>
            <TextView
                android:id="@+id/title2"
                android:layout_toRightOf="@id/student_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent_main_student"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </RelativeLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main3"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleColor="@android:color/black">

        <RelativeLayout
            android:id="@+id/parent_main_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mark_icon"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:src="@drawable/mark"/>
            <TextView
                android:id="@+id/title3"
                android:layout_toRightOf="@id/mark_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent_main_mark"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </RelativeLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main4"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleColor="@android:color/black">

        <RelativeLayout
            android:id="@+id/parent_main_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/schedule_icon"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:src="@drawable/schedule"/>
            <TextView
                android:id="@+id/title4"
                android:layout_toRightOf="@id/schedule_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent_main_schedule"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </RelativeLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main5"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleColor="@android:color/black">

        <RelativeLayout
            android:id="@+id/parent_main_ask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ask_icon"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ask"/>
            <TextView
                android:id="@+id/title5"
                android:layout_toRightOf="@id/ask_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent_main_ask"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </RelativeLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
</LinearLayout>